Fix dialogs being too wide on mobile

--- a/resources/css/system/_dialog.css
+++ b/resources/css/system/_dialog.css
@@ -40,5 +40,6 @@
     margin-inline: calc(-1 * var(--space-gutter)) !important;
     border-radius: 0;
     max-width: none;
+    width: calc(100% + 2 * var(--space-gutter));
   }
 }
